--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "lint": "esw --watch --color ."
+    "lint": "esw --watch --color .",
+    "test": "jest ./"
   },
   "author": "Cully Larson",
   "dependencies": {
@@ -12,5 +13,9 @@
     "eslint": "^7.14.0",
     "eslint-watch": "^7.0.0",
     "standard": "^16.0.3"
+  },
+  "devDependencies": {
+    "eslint-plugin-jest": "^24.1.3",
+    "jest": "^26.6.3"
   }
 }
